<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.mmcz</groupId>
	<artifactId>mrrbe</artifactId>
	<version>1.0</version>
	<packaging>jar</packaging>
	<name>mrrbe</name>
	<description>Demo project for Spring Boot</description>
	<properties>
		<java.version>1.8</java.version>
	</properties>
	
	<repositories>
	    <repository>
	        <id>com.e-iceblue</id>
	        <name>e-iceblue</name>
	        <url>https://repo.e-iceblue.cn/repository/maven-public/</url>
	    </repository>
	</repositories>	
	
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.mybatis.spring.boot</groupId>
			<artifactId>mybatis-spring-boot-starter</artifactId>
			<version>2.2.2</version>
		</dependency>
		<!-- 热加载 -->		
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-devtools</artifactId>
		    <optional>true</optional>
		</dependency>

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>org.apache.ibatis</groupId>
			<artifactId>ibatis-core</artifactId>
			<version>3.0</version>
		</dependency>
		
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.20</version>
			<scope>provided</scope>
		</dependency>
		
		<dependency>
	        <groupId>net.sf.json-lib</groupId>
	        <artifactId>json-lib</artifactId>
	        <version>2.4</version>
	        <classifier>jdk15</classifier>
	    </dependency>
	    <dependency>
	        <groupId>commons-beanutils</groupId>
	        <artifactId>commons-beanutils</artifactId>
	        <version>1.7.0</version>
	    </dependency>
	    <dependency>
	        <groupId>commons-collections</groupId>
	        <artifactId>commons-collections</artifactId>
	        <version>3.1</version>
	    </dependency>
	    <dependency>
	        <groupId>commons-lang</groupId>
	        <artifactId>commons-lang</artifactId>
	        <version>2.5</version>
	    </dependency>
	    <dependency>
	        <groupId>net.sf.ezmorph</groupId>
	        <artifactId>ezmorph</artifactId>
	        <version>1.0.3</version>
	    </dependency>
	    <dependency>
	        <groupId>commons-logging</groupId>
	        <artifactId>commons-logging</artifactId>
	        <version>1.2</version>
	    </dependency>
	    
	    
	    
	    <!-- fastjson依赖 JSONObject等-->
	    <dependency>
	        <groupId>com.alibaba</groupId>
	        <artifactId>fastjson</artifactId>
	        <version>1.2.76</version>
	    </dependency>
	    
	    <!-- opslab依赖 -->
<!--	    <dependency>-->
<!--			<groupId>org.slf4j</groupId>-->
<!--			<artifactId>slf4j-api</artifactId>-->
<!--			<version>1.7.25</version>-->
<!--			<scope>provided</scope>-->
<!--		</dependency>-->
<!-- 		<dependency>-->
<!--			<groupId>org.slf4j</groupId>-->
<!--			<artifactId>slf4j-log4j12</artifactId>-->
<!--			<version>1.7.6</version>-->
<!--			<scope>test</scope>-->
<!--		</dependency>-->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.7</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.7</version>
		</dependency>

		<!--pinyin4j-->
		<dependency>
			<groupId>com.belerweb</groupId>
			<artifactId>pinyin4j</artifactId>
			<version>2.5.1</version>
		</dependency>
		<!--apache-commons-net-->
		<dependency>
			<groupId>commons-net</groupId>
			<artifactId>commons-net</artifactId>
			<version>3.3</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
			<scope>provided</scope>
		</dependency>
		<!--jsonwebtoken 生成token的库 -->
        <dependency>
            <groupId>com.auth0</groupId>
            <artifactId>java-jwt</artifactId>
            <version>3.8.3</version>
        </dependency>
		
		<!--websocket-->
	    <dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-starter-websocket</artifactId>
	    </dependency>
	    
	    <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        
		<!--发送邮件-->        
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-mail</artifactId>
		</dependency>
        
        <!--@NotNull，@Min注解-->
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<version>1.1.0.Final</version>
		</dependency>
		
		<dependency>
	        <groupId>com.alibaba</groupId>
	        <artifactId>druid-spring-boot-starter</artifactId>
	        <version>1.2.8</version>
	    </dependency>
	    
		<dependency>
			<groupId>com.microsoft.sqlserver</groupId>
			<artifactId>mssql-jdbc</artifactId>
			<!--<version>8.4.1.jre8</version>-->
			<version>8.2.2.jre8</version>
		</dependency>
		
		<!--通过smb协议访问远程文件夹-->
		<dependency>
		    <groupId>jcifs</groupId>
		    <artifactId>jcifs</artifactId>
		    <version>1.3.17</version>
		</dependency>
		
		<!--AS400-->
		<dependency>
		    <groupId>net.sf.jt400</groupId>
		    <artifactId>jt400-jdk8</artifactId>
		    <version>9.5</version>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.5.0</version>
		</dependency>		
		
		<!--excel-->
		<dependency>
		    <groupId>org.apache.poi</groupId>
		    <artifactId>poi</artifactId>
		    <version>4.1.0</version>
		</dependency> 
		<dependency> 
		    <groupId>org.apache.poi</groupId>
		    <artifactId>poi-ooxml</artifactId>
		    <version>4.1.0</version>
		</dependency>
		<dependency> 
		    <groupId>org.apache.poi</groupId>
		    <artifactId>poi-ooxml-schemas</artifactId>
		    <version>4.1.0</version>
		</dependency>
		<dependency>
	        <groupId>org.apache.xmlbeans</groupId>
	        <artifactId>xmlbeans</artifactId>
	        <version>3.1.0</version>
		</dependency>
		
		<!--excel2pdf-->
			
		<!--jacob依赖-->
		<dependency>
		    <groupId>com.jacob</groupId>
		    <artifactId>jacob</artifactId>
		    <version>1.20</version>
		    <!--<scope>system</scope>
		    本地的jacob.jar的路径<systemPath>D:\eclipse-workspace\mrrbe\jacob.jar</systemPath>
		    <systemPath>${pom.basedir}/src/main/resources/lib/jacob.jar</systemPath>-->
		</dependency>
		
		<!--FilenameUtils等-->
		<dependency>
		    <groupId>commons-io</groupId>
		    <artifactId>commons-io</artifactId>
		    <version>2.6</version>
		</dependency>
	
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.6</version>
			</plugin>	
			
			<plugin>  
		        <groupId>org.apache.maven.plugins</groupId>  
		        <artifactId>maven-surefire-plugin</artifactId>  
		        <version>2.22.1</version>
		        <configuration>  
		            <!-- 跳过测试类 -->
					<skipTests>true</skipTests>  
		        </configuration>
		
		        <!-- 网上收集还有这个标签也可以跳过test
		        <configuration>
		          <testFailureIgnore>true</testFailureIgnore>
		        </configuration>
		         -->
			</plugin>  
			
			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <compilerArgument>-Xlint:unchecked</compilerArgument>
                    <compilerArgument>-Xlint:deprecation</compilerArgument>
                    
                </configuration>
            </plugin>
		
		</plugins>
	</build>

</project>
